--- a/francaise.html
+++ b/francaise.html
@@ -1,111 +1,173 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/menu.css">
-    <script src="https://kit.fontawesome.com/27d5d9e20d.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <script
+      src="https://kit.fontawesome.com/27d5d9e20d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>OhMyFood - À la française</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
-        <div class="menu_logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
-        </div>
+      <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
+      <div class="menu_logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo" />
+      </div>
     </header>
 
     <main>
-        <section class="illustration">
-            <img src="images/restaurants/francaise.jpg" alt="À la française" />
-            <div class="border_menu">
-                <h2>À la française <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+      <section class="illustration">
+        <img src="images/restaurants/francaise.jpg" alt="À la française" />
+        <div class="border_menu">
+          <h2>À la française</h2>
+            <div class="border_icone">
+                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
             </div>
-        </section>
-
-        <section class="menu">
-            <h2>ENTRÉES</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <p>Aux zestes d'orange <span>25€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p>Carotte, panais, topinambour <span>35€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée <span>20€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>PLATS</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais <span>40€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terre <span>35€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes <span>44€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>DESSERTS</h2>
-            <div id="border"></div>
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes <span>18€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisité <span>22€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Millefeuille croustillant</h3>
-                    <p>Myrtilles et pâte d'amande <span>23€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <div class="order">
-            <button class="order_button" type="submit">Commander</button>
         </div>
+      </section>
+
+      <section class="menu">
+        <h2>ENTRÉES</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Tartare de poulpe acidulé</strong>
+              <span>Aux zestes d'orange</span>
+            </div>
+            <p>25€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Velouté de légumes d'antan</strong>
+              <span>Carottes, panais, topinambour</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Soupe à l'oignon</strong>
+              <span>Revisitée</span>
+            </div>
+            <p>20€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>PLATS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Coquilles Saint-Jacques</strong>
+              <span>Accompagnées d'une purée de panais</span>
+            </div>
+            <p>40€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Magret de canard</strong>
+              <span>Et parmentier de pommes de terre</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Pigeonneau d'Ille-et-Vilaine</strong>
+              <span>Sur son lit de gnocchis aux légumes</span>
+            </div>
+            <p>44€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>DESSERTS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Pétales de violettes glacés</strong>
+              <span>Et purée de noisettes</span>
+            </div>
+            <p>18€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Fondant au chocolat</strong>
+              <span>Revisité</span>
+            </div>
+            <p>22€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Millefeuille croustillant</strong>
+              <span>Myrtilles et pâte d'amande</span>
+            </div>
+            <p>23€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="order">
+        <button class="order_button" type="submit">Commander</button>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="footer_logo">
-            <h1>ohmyfood</h1>
-        </div>
-        <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-        <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-        <a href="index.html">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.com">Contact</a>
+      <div class="footer_logo">
+        <h1>ohmyfood</h1>
+      </div>
+      <a href="index.html"
+        ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+      >
+      <a href="index.html"
+        ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+      >
+      <a href="index.html">Mentions légales</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
-</body>
+  </body>
 </html>
