--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -1,117 +1,184 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/menu.css">
-    <script src="https://kit.fontawesome.com/27d5d9e20d.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - La Note Enchantée</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <script
+      src="https://kit.fontawesome.com/27d5d9e20d.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>OhMyFood - La note enchantée</title>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
-        <div class="menu_logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
-        </div>
+      <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
+      <div class="menu_logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo" />
+      </div>
     </header>
 
     <main>
-        <section class="illustration">
-            <img src="images/restaurants/note_enchantee.jpg" alt="La Note Enchantée" />
-            <div class="border_menu">
-                <h2>La note enchantée <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+      <section class="illustration">
+        <img src="images/restaurants/note_enchantee.jpg" alt="La note enchantée" />
+        <div class="border_menu">
+          <h2>La note enchantée</h2>
+            <div class="border_icone">
+                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
             </div>
-        </section>
-
-        <section class="menu">
-            <h2>ENTRÉES</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Ravioles de foie gras</h3>
-                    <p>Accompagnés de leur crème à la truffe <span>25€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Caviar osciètre</h3>
-                    <p>Sur blini à la farine de blé noir<span>35€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Homard et espuma de potiron</h3>
-                    <p>Mariné aux zestes d'orange <span>20€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <p>Confiture de figue et pain toasté <span>35€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>PLATS</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                    <p>Sur lit de purée de céleri-rave <span>40€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Lagoustine poêlée</h3>
-                    <p>Purée de patate douce <span>35€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Miojté de queue de boeuf</h3>
-                    <p>Et riz sauvage aux zestes de citron <span>44€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>DESSERTS</h2>
-            <div id="border"></div>
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <p>Glace au caramel brun et sel de Guérande <span>18€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Baba au rhum revisité</h3>
-                    <p>Avec son coulis de citron <span>22€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Tarte au citron meringué</h3>
-                    <p>Destructurée <span>23€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <div class="order">
-            <button class="order_button" type="submit">Commander</button>
         </div>
+      </section>
+
+      <section class="menu">
+        <h2>ENTRÉES</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Ravioles de foie gras</strong>
+              <span>Accompagnés de leur crème à la truffe</span>
+            </div>
+            <p>25€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Caviar osciètre</strong>
+              <span>Sur blini à la farine de blé noir</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Homard et espuma de potiron</strong>
+              <span>Mariné aux zestes d'orange</span>
+            </div>
+            <p>20€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Foie gras de canard cuit entier</strong>
+              <span>Confiture de figue et pain toasté</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>PLATS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Noix de coquilles Saint-Jacques</strong>
+              <span>Sur lit de purée de céleri-rave</span>
+            </div>
+            <p>40€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Langoustine poêlée</strong>
+              <span>Purée de patate douce</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Mijoté de queue de boeuf</strong>
+              <span>Et riz sauvage aux zestes de citron</span>
+            </div>
+            <p>44€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>DESSERTS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Macaron noisette et chocolat</strong>
+              <span>Glace au caramel brun et sel de Guérande</span>
+            </div>
+            <p>18€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Baba au rhum revisité</strong>
+              <span>Avec son coulis de citron</span>
+            </div>
+            <p>22€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Tarte au citron meringuée</strong>
+              <span>Déstructurée</span>
+            </div>
+            <p>23€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="order">
+        <button class="order_button" type="submit">Commander</button>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="footer_logo">
-            <h1>ohmyfood</h1>
-        </div>
-        <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-        <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-        <a href="index.html">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.com">Contact</a>
+      <div class="footer_logo">
+        <h1>ohmyfood</h1>
+      </div>
+      <a href="index.html"
+        ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+      >
+      <a href="index.html"
+        ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+      >
+      <a href="index.html">Mentions légales</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
-</body>
+  </body>
 </html>
