--- a/palette_gout.html
+++ b/palette_gout.html
@@ -1,111 +1,173 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/menu.css">
-    <script src="https://kit.fontawesome.com/27d5d9e20d.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - La Palette du Goût</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <script
+      src="https://kit.fontawesome.com/27d5d9e20d.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>OhMyFood - La palette du goût</title>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
-        <div class="menu_logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
-        </div>
+      <a href="index.html" class="return"><i class="fas fa-arrow-left"></i></a>
+      <div class="menu_logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo" />
+      </div>
     </header>
 
     <main>
-        <section class="illustration">
-            <img src="images/restaurants/palette_gout.jpg" alt="La Palette du Goût" />
-            <div class="border_menu">
-                <h2>La palette du goût <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+      <section class="illustration">
+        <img src="images/restaurants/palette_gout.jpg" alt="La palette du goût" />
+        <div class="border_menu">
+          <h2>La palette du goût</h2>
+            <div class="border_icone">
+                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
             </div>
-        </section>
-
-        <section class="menu">
-            <h2>ENTRÉES</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Fricassée d'escargot</h3>
-                    <p>Au piment d'Espelette <span>25€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire <span>35€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Oeuf au plat</h3>
-                    <p>Assaisonné à la truffe sur son lit de caviar <span>20€</span></p>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>PLATS</h2>
-            <div id="border"></div>
-
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <p>Accompagné de sa ribambelle de légumes <span>40€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <p>À la truffe noire sur sa purée de panais <span>35€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Filet de Turbot</h3>
-                    <p>Aux agrumes <span>44€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <section class="menu">
-            <h2>DESSERTS</h2>
-            <div id="border"></div>
-            <div class="menu_container">
-                <div class="menu_container_meal">
-                    <h3>Paris-Brest</h3>
-                    <p>Revisité <span>18€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar <span>22€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-
-                <div class="menu_container_meal">
-                    <h3>Mousse au chocolat</h3>
-                    <p>Au piment d'espelette et à la truffe noire <span>23€</span><i class="fas fa-check-circle"></i></p>
-                </div>
-            </div>
-        </section>
-
-        <div class="order">
-            <button class="order_button" type="submit">Commander</button>
         </div>
+      </section>
+
+      <section class="menu">
+        <h2>ENTRÉES</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Fricassée d'escargot</strong>
+              <span>Au piment d'Espelette</span>
+            </div>
+            <p>25€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Foie gras de canard mi-cuit</strong>
+              <span>Et ses copeaux de truffe noire</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Oeuf au plat</strong>
+              <span>Assaisonné à la truffe sur lit de caviar</span>
+            </div>
+            <p>20€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>PLATS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Filet de boeuf aux herbes</strong>
+              <span>Accompagné de sa ribambelle de légumes</span>
+            </div>
+            <p>40€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Parmentier de queue de boeuf</strong>
+              <span>À la truffe noire sur sa purée de panais</span>
+            </div>
+            <p>35€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Filet de turbot</strong>
+              <span>Aux agrumes</span>
+            </div>
+            <p>44€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <h2>DESSERTS</h2>
+        <div class="border"></div>
+
+        <div class="menu_container">
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Paris-Brest</strong>
+              <span>Revisité</span>
+            </div>
+            <p>18€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Macaron au chocolat d'exception</strong>
+              <span>Et glace à la vanille de Madagascar</span>
+            </div>
+            <p>22€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+
+          <div class="menu_container_meal">
+            <div class="menu_container_meal_text">
+              <strong>Mousse au chocolat</strong>
+              <span>Au piment d'Espelette et à la truffe noire</span>
+            </div>
+            <p>23€</p>
+            <div class="menu_container_meal_check">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="order">
+        <button class="order_button" type="submit">Commander</button>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="footer_logo">
-            <h1>ohmyfood</h1>
-        </div>
-        <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-        <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-        <a href="index.html">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.com">Contact</a>
+      <div class="footer_logo">
+        <h1>ohmyfood</h1>
+      </div>
+      <a href="index.html"
+        ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+      >
+      <a href="index.html"
+        ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+      >
+      <a href="index.html">Mentions légales</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
-</body>
+  </body>
 </html>
