--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             <div class="card_footer_icone">
                                 <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
                             </div>
+                        </div>
                     </div>
                 </a>
             </article>
